ajuste sobre pruebas